--- a/7.1.0/angular/src/main/all-cv/all-cv.component.scss
+++ b/7.1.0/angular/src/main/all-cv/all-cv.component.scss
@@ -26,6 +26,14 @@
 .card{
     height:260px;
 }
+.text-empty {
+    font-size: 18px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.015em;
+    color: #000000;
+    margin: 180px auto;
+}
 
 .form-control {
     border-radius: 0.25rem;
