--- a/7.1.0/angular/src/main/cv-management/cv-management.component.scss
+++ b/7.1.0/angular/src/main/cv-management/cv-management.component.scss
@@ -18,6 +18,14 @@ a.icon-permistion {
     height: 23vw;
     object-fit: cover;
 }
+.text-empty {
+    font-size: 18px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.015em;
+    color: #000000;
+    margin: 180px auto;
+}
 .confirm-delete {
     padding: 28px 0px 14px;
 
