--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.css
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.css
@@ -479,4 +479,726 @@
     display: none;
   }
   /* fontawesome */
-  
+  #cvTemplate3 * {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
+}
+.fa, .fas, .far, .fab{
+  font-family: "Font Awesome 5 Free" !important;
+}
+#cvTemplate3 body {
+    background: linear-gradient(to right, white, white);
+}
+
+#cvTemplate3 .resume {
+    width: 900px;
+    min-height: 1050px;
+    background: #fff;
+    display: flex;
+}
+
+#cvTemplate3 .left {
+    background: #8a0f4e;
+    width: 250px;
+    padding: 0 20px;
+}
+
+#cvTemplate3 .right {
+    width: calc(100% - 250px);
+}
+
+#cvTemplate3 .left .img_holder {
+    text-align: center;
+    padding: 20px 0;
+}
+
+#cvTemplate3 .left .img_holder img {
+    width: 200px;
+    border-radius: 30px;
+}
+
+#cvTemplate3 .pb {
+    padding-bottom: 20px;
+}
+
+#cvTemplate3 .title {
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    padding-bottom: 10px;
+    color: white;
+    position: relative;
+    text-align: right;
+    margin-bottom: 15px;
+}
+#cvTemplate3 .exp .title, #cvTemplate3 .education .title{
+	color: black;
+}
+#cvTemplate3 .title:before {
+    content: "";
+    position: absolute;
+    top: 35px;
+    right: 0;
+    width: 50px;
+    height: 3px;
+    background: white;
+}
+
+#cvTemplate3 .left .icon {
+    font-size: 30px;
+    color: white;
+}
+
+#cvTemplate3 .left .text {
+    color: white;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+#cvTemplate3 .contact .li_wrap {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+#cvTemplate3 .contact .li_wrap .icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 15px;
+}
+
+#cvTemplate3 .contact .li_wrap .text {
+    width: calc(100% - 50px);
+    word-break: break-word;
+    color: #fff;
+}
+
+#cvTemplate3 .skills ul,
+#cvTemplate3 .hobbies ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#cvTemplate3 .skills .li_wrap,
+#cvTemplate3 .hobbies .li_wrap {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 15px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#cvTemplate3 .skills .li_wrap {
+  border: 2px solid #fff;
+}
+
+#cvTemplate3 .skills .li_wrap .text,
+#cvTemplate3 .hobbies .li_wrap .text {
+    margin-top: 5px;
+}
+
+#cvTemplate3 .hobbies .li_wrap {
+    border: 2px solid #fff;
+}
+
+#cvTemplate3 .hobbies .li_wrap .icon,
+#cvTemplate3 .hobbies .li_wrap .text {
+    color: #fff;
+}
+
+/* #cvTemplate3 .hobbies .li_wrap:hover {
+    background: #fff;
+} */
+
+#cvTemplate3 .hobbies .li_wrap:hover .icon,
+#cvTemplate3 .hobbies .li_wrap:hover .text {
+    color: white;
+}
+
+#cvTemplate3 .header {
+    background: #8a0f4e;
+    padding: 15px 30px;
+    color: #fff;
+    height: 240px;
+}
+
+#cvTemplate3 .header .name {
+    font-size: 52px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: white;
+}
+
+#cvTemplate3 .header .role {
+    font-weight: 300;
+    font-size: 20px;
+}
+
+#cvTemplate3 .header .about {
+    margin-top: 20px;
+    line-height: 26px;
+}
+
+#cvTemplate3 .right_inner {
+    padding: 30px;
+    color: black;
+}
+
+#cvTemplate3 .right_inner .education {
+    margin-top: 30px;
+}
+
+#cvTemplate3 .right_inner .li_wrap {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+#cvTemplate3 .right_inner .li_wrap .date {
+    width: 125px;
+    color: black;
+}
+
+#cvTemplate3 .right_inner .li_wrap .info {
+    width: calc(100% - 125px);
+    padding-left: 25px;
+    position: relative;
+}
+
+#cvTemplate3 .right_inner .li_wrap .info_title {
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: black;
+}
+
+#cvTemplate3 .right_inner .li_wrap .info_com {
+    font-weight: 300;
+    font-size: 14px;
+    margin-top: 3px;
+}
+
+#cvTemplate3 .right_inner .li_wrap .info_cont {
+    margin-top: 15px;
+}
+
+#cvTemplate3 .right_inner .li_wrap .info:before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    background: black;
+    border-radius: 50%;
+}
+
+#cvTemplate3 .right_inner .li_wrap .info:after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 4px;
+    width: 2px;
+    height: 90%;
+    background: black;
+}
+/** css Template 4
+/* css Template 2 */
+#cvTemplate4 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  font-family: "Montserrat", sans-serif;
+}
+
+#cvTemplate4 body {
+  background: #585c68;
+  font-size: 14px;
+  line-height: 22px;
+  color: #555555;
+}
+
+#cvTemplate4 .bold {
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+#cvTemplate4 .semi-bold {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+#cvTemplate4 .resume {
+  min-height: 1050px;
+  height: auto;
+  display: flex;
+}
+#cvTemplate4 .resume_hobby .li_wrap{
+  height: 75px;
+  margin-bottom: 15px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#cvTemplate4 .resume_hobby .li_wrap .text{
+  margin-top:5px;
+}
+#cvTemplate4 .resume .resume_left {
+  width: 280px;
+  background: #07a875;
+}
+
+#cvTemplate4 .resume .resume_left .resume_profile {
+  width: 100%;
+  height: 280px;
+}
+
+#cvTemplate4 .resume .resume_left .resume_profile img {
+  width: 100%;
+  height: 100%;
+}
+
+#cvTemplate4 .resume .resume_left .resume_content {
+  padding: 0 25px;
+}
+
+#cvTemplate4 .resume .title {
+  margin-bottom: 20px;
+}
+
+#cvTemplate4 .resume .resume_left .bold {
+  color: #fff;
+}
+
+#cvTemplate4 .resume .resume_left .regular {
+  color: #b1eaff;
+}
+
+#cvTemplate4 .resume .resume_item {
+  padding: 25px 0;
+  border-bottom: 2px solid #b1eaff;
+}
+
+#cvTemplate4 .resume .resume_left .resume_item:last-child,
+#cvTemplate4 .resume .resume_right .resume_item:last-child {
+  border-bottom: 0px;
+}
+
+#cvTemplate4 .resume .resume_left ul li {
+  display: flex;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+#cvTemplate4 .resume .resume_left ul li:last-child {
+  margin-bottom: 0;
+}
+
+#cvTemplate4 .resume .resume_left ul li .icon {
+  width: 35px;
+  height: 35px;
+  background: #fff;
+  color: #07a875;
+  border-radius: 50%;
+  margin-right: 15px;
+  font-size: 16px;
+  position: relative;
+}
+
+#cvTemplate4 .resume .icon i,
+#cvTemplate4 .resume .resume_right .resume_hobby ul li i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#cvTemplate4 .resume .resume_left ul li .data {
+  color: #b1eaff;
+}
+
+#cvTemplate4 .resume .resume_left .resume_skills ul li {
+  display: flex;
+  margin-bottom: 10px;
+  color: #b1eaff;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#cvTemplate4 .resume .resume_left .resume_skills ul li .skill_name {
+  width: 25%;
+}
+
+#cvTemplate4 .resume .resume_left .resume_skills ul li .skill_progress {
+  width: 60%;
+  margin: 0 5px;
+  height: 5px;
+  background: #009fd9;
+  position: relative;
+}
+
+#cvTemplate4 .resume .resume_left .resume_skills ul li .skill_per {
+  width: 15%;
+}
+
+#cvTemplate4 .resume .resume_left .resume_skills ul li .skill_progress span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #fff;
+}
+
+#cvTemplate4 .resume .resume_left .resume_social .semi-bold {
+  color: #fff;
+  margin-bottom: 3px;
+}
+
+#cvTemplate4 .resume .resume_right {
+  width: 520px;
+  background: #fff;
+  padding: 25px;
+}
+
+#cvTemplate4 .resume .resume_right .bold {
+  color: #07a875;
+}
+
+#cvTemplate4 .resume .resume_right .resume_work ul,
+#cvTemplate4 .resume .resume_right .resume_education ul {
+  padding-left: 40px;
+  overflow: hidden;
+}
+
+#cvTemplate4 .resume .resume_right ul li {
+  position: relative;
+}
+
+#cvTemplate4 .resume .resume_right ul li .date {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+#cvTemplate4 .resume .resume_right ul li .info {
+  margin-bottom: 20px;
+}
+
+#cvTemplate4 .resume .resume_right ul li:last-child .info {
+  margin-bottom: 0;
+}
+
+#cvTemplate4 .resume .resume_right .resume_work ul li:before,
+#cvTemplate4 .resume .resume_right .resume_education ul li:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -25px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  border: 2px solid #07a875;
+}
+
+#cvTemplate4 .resume .resume_right .resume_work ul li:after,
+#cvTemplate4 .resume .resume_right .resume_education ul li:after {
+  content: "";
+  position: absolute;
+  top: 14px;
+  left: -21px;
+  width: 2px;
+  height: 115px;
+  background: #07a875;
+}
+
+#cvTemplate4 .resume .resume_right .resume_hobby ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+#cvTemplate4 .resume .resume_right .resume_hobby ul li {
+  width: 80px;
+  height: 80px;
+  border: 2px solid #07a875;
+  border-radius: 50%;
+  position: relative;
+  color: #07a875;
+}
+
+#cvTemplate4 .resume .resume_right .resume_hobby ul li i {
+  font-size: 30px;
+}
+
+#cvTemplate4 .resume .resume_right .resume_hobby ul li:before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  right: -52px;
+  width: 50px;
+  height: 2px;
+  background: #07a875;
+}
+
+#cvTemplate4 .resume .resume_right .resume_hobby ul li:last-child:before {
+  display: none;
+}
+/* css Template 5
+/* css Template 2 */
+#cvTemplate5 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  font-family: "Montserrat", sans-serif;
+}
+
+#cvTemplate5 body {
+  background: #585c68;
+  font-size: 14px;
+  line-height: 22px;
+  color: #555555;
+}
+
+#cvTemplate5 .bold {
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+#cvTemplate5 .semi-bold {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+#cvTemplate5 .resume {
+  min-height: 1050px;
+  height: auto;
+  display: flex;
+}
+#cvTemplate5 .resume_hobby .li_wrap{
+  height: 75px;
+  margin-bottom: 15px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#cvTemplate5 .resume_hobby .li_wrap .text{
+  margin-top:5px;
+}
+#cvTemplate5 .resume .resume_left {
+  width: 280px;
+  background: #37a0ad;
+}
+
+#cvTemplate5 .resume .resume_left .resume_profile {
+  width: 100%;
+  height: 280px;
+}
+
+#cvTemplate5 .resume .resume_left .resume_profile img {
+  width: 100%;
+  height: 100%;
+}
+
+#cvTemplate5 .resume .resume_left .resume_content {
+  padding: 0 25px;
+}
+
+#cvTemplate5 .resume .title {
+  margin-bottom: 20px;
+}
+
+#cvTemplate5 .resume .resume_left .bold {
+  color: #fff;
+}
+
+#cvTemplate5 .resume .resume_left .regular {
+  color: #b1eaff;
+}
+
+#cvTemplate5 .resume .resume_item {
+  padding: 25px 0;
+  border-bottom: 2px solid #b1eaff;
+}
+
+#cvTemplate5 .resume .resume_left .resume_item:last-child,
+#cvTemplate5 .resume .resume_right .resume_item:last-child {
+  border-bottom: 0px;
+}
+
+#cvTemplate5 .resume .resume_left ul li {
+  display: flex;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+#cvTemplate5 .resume .resume_left ul li:last-child {
+  margin-bottom: 0;
+}
+
+#cvTemplate5 .resume .resume_left ul li .icon {
+  width: 35px;
+  height: 35px;
+  background: #fff;
+  color: #37a0ad;
+  border-radius: 50%;
+  margin-right: 15px;
+  font-size: 16px;
+  position: relative;
+}
+
+#cvTemplate5 .resume .icon i,
+#cvTemplate5 .resume .resume_right .resume_hobby ul li i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#cvTemplate5 .resume .resume_left ul li .data {
+  color: #b1eaff;
+}
+
+#cvTemplate5 .resume .resume_left .resume_skills ul li {
+  display: flex;
+  margin-bottom: 10px;
+  color: #b1eaff;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#cvTemplate5 .resume .resume_left .resume_skills ul li .skill_name {
+  width: 25%;
+}
+
+#cvTemplate5 .resume .resume_left .resume_skills ul li .skill_progress {
+  width: 60%;
+  margin: 0 5px;
+  height: 5px;
+  background: #009fd9;
+  position: relative;
+}
+
+#cvTemplate5 .resume .resume_left .resume_skills ul li .skill_per {
+  width: 15%;
+}
+
+#cvTemplate5 .resume .resume_left .resume_skills ul li .skill_progress span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #fff;
+}
+
+#cvTemplate5 .resume .resume_left .resume_social .semi-bold {
+  color: #fff;
+  margin-bottom: 3px;
+}
+
+#cvTemplate5 .resume .resume_right {
+  width: 520px;
+  background: #fff;
+  padding: 25px;
+}
+
+#cvTemplate5 .resume .resume_right .bold {
+  color: #37a0ad;
+}
+
+#cvTemplate5 .resume .resume_right .resume_work ul,
+#cvTemplate5 .resume .resume_right .resume_education ul {
+  padding-left: 40px;
+  overflow: hidden;
+}
+
+#cvTemplate5 .resume .resume_right ul li {
+  position: relative;
+}
+
+#cvTemplate5 .resume .resume_right ul li .date {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+#cvTemplate5 .resume .resume_right ul li .info {
+  margin-bottom: 20px;
+}
+
+#cvTemplate5 .resume .resume_right ul li:last-child .info {
+  margin-bottom: 0;
+}
+
+#cvTemplate5 .resume .resume_right .resume_work ul li:before,
+#cvTemplate5 .resume .resume_right .resume_education ul li:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -25px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  border: 2px solid #37a0ad;
+}
+
+#cvTemplate5 .resume .resume_right .resume_work ul li:after,
+#cvTemplate5 .resume .resume_right .resume_education ul li:after {
+  content: "";
+  position: absolute;
+  top: 14px;
+  left: -21px;
+  width: 2px;
+  height: 115px;
+  background: #37a0ad;
+}
+
+#cvTemplate5 .resume .resume_right .resume_hobby ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+#cvTemplate5 .resume .resume_right .resume_hobby ul li {
+  width: 80px;
+  height: 80px;
+  border: 2px solid #37a0ad;
+  border-radius: 50%;
+  position: relative;
+  color: #37a0ad;
+}
+
+#cvTemplate5 .resume .resume_right .resume_hobby ul li i {  
+  font-size: 30px;
+}
+
+#cvTemplate5 .resume .resume_right .resume_hobby ul li:before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  right: -52px;
+  width: 50px;
+  height: 2px;
+  background: #37a0ad;
+}
+
+#cvTemplate5 .resume .resume_right .resume_hobby ul li:last-child:before {
+  display: none;
+}
