--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
@@ -1,3 +1,3 @@
 <div [id]="templateName">
-    <div *dynamicComponent="templateHTML; context: {dataCV: dataCV};"></div>
+    <div *dynamicComponent="templateHTML; context: {dataCV: dataCV, address: address};"></div>
 </div>
