--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -142,22 +142,22 @@
                                     <div formGroupName="address">
                                         <div class="form-group">
                                             <label for="Address" class="form-label">Địa chỉ</label>
-                                            <input type="text" class="form-control bg-gray-100" formControlName="street"
+                                            <input type="text" (change)="changeAddress()" class="form-control bg-gray-100" formControlName="street"
                                                 placeholder="Nhập địa chỉ của bạn" name="Address">
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col-md-6">
                                                 <label for="exampleInputAddress" class="form-label">Tỉnh / Thành
                                                     Phố</label>
-                                                <ng-select bindLabel="name" bindValue="id" [searchable]="false"
+                                                <ng-select bindLabel="name" (change)="changeAddress()" bindValue="id" [searchable]="false"
                                                     [items]="provinces" (change)="getDistrictsByProvince($event.id)"
                                                     formControlName="province"
                                                     placeholder="Chọn Tỉnh / Thành Phố của bạn">
                                                 </ng-select>
                                             </div>
                                             <div class="form-group col-md-6">
-                                                <label for="exampleInputAddress" class="form-label">Quận / Huyện</label>
-                                                <ng-select bindLabel="districtName" bindValue="id" [searchable]="false"
+                                                <label for="exampleInputAddress"  class="form-label">Quận / Huyện</label>
+                                                <ng-select bindLabel="districtName" (change)="changeAddress()" bindValue="id" [searchable]="false"
                                                     [items]="districts" formControlName="district"
                                                     placeholder="Chọn Quận / Huyện của bạn">
                                                 </ng-select>
@@ -374,7 +374,7 @@
                     <div class="col p-0 d-flex justify-content-center align-items-center"
                         style="background-color: #F5F5F5;">
                         <div id="cv" #cv crossOrigin="anonymous">
-                            <app-base-template [dataCV]="createCVForm" [teamplateId]="templateId"></app-base-template>
+                            <app-base-template [address]="addressNow" [dataCV]="createCVForm" [teamplateId]="templateId"></app-base-template>
                         </div>
                     </div>
 
