--- a/7.1.0/angular/src/main/user-information/user-information.component.html
+++ b/7.1.0/angular/src/main/user-information/user-information.component.html
@@ -47,7 +47,7 @@
                 </ng-select>
               </div>
             </div>
-            <div class="form-row">
+            <!-- <div class="form-row">
               <h3 class="font-weight-bold title-form">Quản lý tài khoản</h3>
             </div>
             <div class="form-group">
@@ -60,20 +60,10 @@
               <input type="password" class="form-control" [(ngModel)]="userLogin.password" name="password"
                 id="exampleInputPassword" disabled>
             </div> -->
-            <div class="form-group custom-control custom-switch">
+            <!-- <div class="form-group custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="customSwitches">
               <label class="custom-control-label" for="customSwitches">Nhận thông báo</label>
-            </div>
-            <div class="form-row">
-              <h3 class="font-weight-bold title-form">CV của tôi</h3>
-            </div>
-            <div class="form-group">
-              <a href="#" class="link-cv">CV-TranDucLong-09-2021-2.pdf</a>
-            </div>
-            <div class="form-group">
-              <label class="text-muted label-pdf">Hỗ trợ định dạng .doc .docx .pdf,<br>
-                không chứa mật khẩu bảo vệ, dung lượng dưới 1 MB</label>
-            </div>
+            </div> --> -->
             <div class="form-group"><button type="button" class="btn btn-primary float-right btn-form">Lưu</button>
               <button type="submit" class="btn btn-primary float-right btn-form">Hủy</button>
             </div>
