--- a/7.1.0/angular/src/main/all-cv/all-cv.component.html
+++ b/7.1.0/angular/src/main/all-cv/all-cv.component.html
@@ -26,7 +26,7 @@
                             <div class="card card-border">
                                 <div class="card-body d-flex">
                                     <div class="card-title">
-                                        <img src="./../../assets/img/Avatar-Green.svg" style="height:5rem" alt="Avatar">
+                                        <img [src]="item.avatar" style="height:5rem; border-radius: 50%;" alt="Avatar">
                                     </div>
                                     <div>
                                         <h3 class="card-subtitle mb-2 font-weight-bold float-left ml-3">
