--- a/7.1.0/angular/src/main/user-information/user-information.component.html
+++ b/7.1.0/angular/src/main/user-information/user-information.component.html
@@ -63,7 +63,7 @@
             <!-- <div class="form-group custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="customSwitches">
               <label class="custom-control-label" for="customSwitches">Nhận thông báo</label>
-            </div> --> -->
+            </div> -->
             <div class="form-group"><button type="button" class="btn btn-primary float-right btn-form">Lưu</button>
               <button type="submit" class="btn btn-primary float-right btn-form">Hủy</button>
             </div>
